--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,5 +1,9 @@
 name: Build
 
+permissions:
+  contents: write
+  discussions: write
+
 on:
   push:
     branches: "*"
@@ -129,6 +133,8 @@ jobs:
         if: |
           startsWith(github.repository, 'justjavac') &&
           startsWith(github.ref, 'refs/tags/')
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           files: |
             target/release/gpui-memory-game-x86_64-pc-windows-msvc.zip
