--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,21 +14,18 @@ resolver = "2"
 
 [dependencies]
 anyhow = "1.0.95"
-futures = "0.3.31"
+futures = { version = "0.3.31", default-features = false }
 gpui = { git = "https://github.com/zed-industries/zed.git" }
-gpui_tokio = { git = "https://github.com/zed-industries/zed.git" }
-# llrt_core = { git = "https://github.com/awslabs/llrt" }
 rand = "0.9.0"
 rust-embed = "8.6.0"
 smallvec = "1.13.2"
-url = "2.5.1"
-tokio = { version = "1.44.1", features = ["full"] }
 mimalloc = "0.1.43"
-rquickjs = { version = "0.9.0", features = [
-    "full-async",
-    "parallel",
-    "rust-alloc",
-], default-features = false }
+# rquickjs = { version = "0.9.0", features = [
+#     "full-async",
+#     "parallel",
+#     "rust-alloc",
+# ], default-features = false }
+smol = "2.0.2"
 
 [target.'cfg(target_os = "windows")'.dependencies]
 windows = { version = "0.58", features = [
