--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,10 @@ resolver = "2"
 [dependencies]
 anyhow = "1.0.95"
 futures = "0.3.31"
-gpui = { git = "https://github.com/zed-industries/zed.git" }
+gpui = { git = "https://github.com/zed-industries/zed.git", default-features = false, features = [
+    "http_client",
+    "font-kit",
+] }
 rand = "0.9.0"
 rust-embed = "8.6.0"
 smallvec = "1.13.2"
