--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -1,6 +1,14 @@
 [target.x86_64-pc-windows-msvc]
 rustflags = ["-Ctarget-feature=+crt-static", "-Clink-arg=/STACK:8000000"]
 
+[target.x86_64-unknown-linux-gnu]
+linker = "clang"
+rustflags = ["-C", "link-arg=-fuse-ld=mold"]
+
+[target.aarch64-unknown-linux-gnu]
+linker = "clang"
+rustflags = ["-C", "link-arg=-fuse-ld=mold"]
+
 [alias]
 lint = "clippy -- -D warnings"
 r    = "run"
